--- a/css/style.css
+++ b/css/style.css
@@ -110,3 +110,10 @@ body{
 .white-color {
     color: #fff;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
